corrected bug that allowed for selection of events with overlapping times
and added css for disabled checkbox labels

--- a/css/style.css
+++ b/css/style.css
@@ -207,3 +207,7 @@ button:hover {
 .fieldError {
 	border: 4px solid red;
 }
+.disabled {
+    color:#ccc;
+    text-decoration: line-through;
+}
